# hazakura-editor

./: .gitignore  AGENTS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  agent.html  apple-assist.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  postv05_hazakura-note-memo.md  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
docs/: README.md  agent-workbench-boundary.md  ai-markdown-ingest-plan.md  (+66 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.appstore-preview.json  tauri.conf.appstore.json  tauri.conf.json
src-tauri/capabilities/: agent-window.json  apple-assist-window.json  default.json
src-tauri/entitlements/: mac-app-store.entitlements
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  auto_backup.rs  distribution.rs  lib.rs  menu.rs  os_handoff.rs  tests.rs  types.rs  util.rs
src-tauri/src/commands/: agent_workbench.rs  app_window.rs  apple_assist.rs  apple_assist_supervisor.rs  apple_assist_target.rs  book_scope.rs  export.rs  external_links.rs  files.rs  images.rs  import_assist.rs  okf.rs  reference_compare.rs  search.rs  security_bookmarks.rs  workspace.rs  workspace_broadcast.rs
src-tauri/src/import_assist/: draft.rs  helper.rs  mod.rs  path.rs  pdf_reference.rs  pdf_text.rs  stage.rs
src-tauri/src/security/: window_guard.rs
src-tauri/src/tests/: agent_workbench.rs  app_window.rs  apple_assist.rs  apple_assist_supervisor.rs  backup.rs  book_scope.rs  common.rs  encoding.rs  external_links.rs  files.rs  menu.rs  mod.rs  okf.rs  os_handoff.rs  search.rs  security.rs  util.rs  workspace.rs  workspace_broadcast.rs
(+1123 files in other folders)
