[package]
name = "hazakura-editor"
version = "0.14.0"
description = "Markdown-safe editor prototype"
authors = ["Hazakura Lab"]
edition = "2021"

[lib]
name = "hazakura_note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
