[package]
name = "hazakura-editor"
version = "1.1.0"
description = "Markdown-safe editor prototype"
authors = ["Hazakura Lab"]
edition = "2021"

[lib]
name = "hazakura_note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
encoding_rs = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSData", "NSError", "NSString", "NSURL"] }
# Native macOS vibrancy (NSVisualEffectView) for the v0.25 native-feeling
# shell. macOS-only: guarded by cfg so other platforms stay unaffected.
window-vibrancy = "0.7"

[features]
custom-protocol = ["tauri/custom-protocol"]
